<resources>
    <string name="app_name">BLE_Scan</string>
    <string name="sample">Sample</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="refresh">Refresh</string>
    <string name="scan">Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="device_name">Device Name: </string>
    <string name="device_address">Device Address: </string>
    <string name="device_state">Device State</string>
    <string name="data">Data</string>
    <string name="unknown_service">Unknown Service</string>
    <string name="unknown_characteristic">Unknown Characterisitic</string>
    <string name="no_data">No Data</string>
    <string name="scan_le_devices">Scan LE Devices</string>
    <string name="connected">Connected</string>
</resources>
